# HPACK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
include/hpack/: basic_types.hpp  decoder.hpp  dynamic_table.hpp  encoder.hpp  hpack.hpp  huffman_table.def  integers.hpp  static_table.def  static_table.hpp  strings.hpp
src/: decoder.cpp  dynamic_table.cpp  huffman.cpp  static_table.cpp
tests/: CMakeLists.txt  test_hpack.cpp
